[package]
name = "mqtt"
version = "0.2.0"
authors = ["squillion <support@squillion.io>"]
edition = "2021"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec", "compat", "time"] }
tokio-stream = { version = "0.1.12", features = ["net"] }
bytes="1.4.0"
futures="0.3.27"
futures-util="0.3.21"
rust-crypto = "0.2.36"
base64 = "0.21.0"
rand="0.8.5"
log="0.4.17"
env_logger="0.10.0"
prometheus = "0.13.3"
hyper = { version = "0.14.25", features = ["server"] }
lazy_static = "1.4.0"
tokio-tungstenite = "0.18.0"
signal-hook = "0.3.15"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
native-tls = "0.2.11"
tokio-native-tls = "0.3.1"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-json = "2.6.1"
slog-retry = "0.1.1"
hostname = "0.3.1"
async-trait = "0.1.67"
tokio-test="0.4.2"
ws_stream_tungstenite = { version = "0.8.0", features = ["tokio_io"] }
async-tungstenite = { version = "0.17.2", features =  ["tokio-runtime", "async-std-runtime"] }
openssl = "0.10.52"
deadpool = "0.9.5"
deadpool-sqlite = "0.5.0"
